overlay/management/argo-workflows/argo-server-sso-auth-mode-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo
spec:
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - --auth-mode=sso
            - --auth-mode=client
