overlay/management/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-server-ingress
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: argoworkflows.homelab.ntbc.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-server
                port:
                  name: web
  tls:
    - hosts:
        - argoworkflows.homelab.ntbc.io
      secretName: argo-workflows-server-tls
